fix height that makes profile section get scrollbars

--- a/styles/shared/profile.css
+++ b/styles/shared/profile.css
@@ -112,10 +112,6 @@
 
 @media (max-width: 1020px) {
     #contact {
-        height: 100vh;
-    }
-
-    #contact {
         min-height: 100vh;
     }
 
@@ -211,5 +207,6 @@
     #profile {
         display: flex;
         flex-direction: column;
+        flex-wrap: nowrap;
     }
 }
